Prevent tags from line-wrapping

--- a/css/personal.css
+++ b/css/personal.css
@@ -108,6 +108,7 @@ section:has(#publications) {
     border-radius: 3px;
     padding: 0 1pt 0 1pt;
     font-size: 0.8em;
+    white-space: nowrap;
 }
 
 .tag-first::before {
